--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@ and open the template in the editor.
                 
             </section>
         </div>
+        <script type="text/javascript" src='//code.jquery.com/jquery-1.11.1.min.js'></script>
         <script type="text/javascript" src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js'></script>
         <script type="text/javascript" src='deckOfCards.js'></script>
+        <script type="text/javascript" src='play.js'></script>
     </body>
 </html>
