--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@ and open the template in the editor.
         <div class="container">
             <div class="Well">
                 <h1>
-                    Un jeu de cartes en Javascript. Merveilleux.
+                  <i class="fa fa-card"></i>  Un jeu de cartes en Javascript. Merveilleux.
                 </h1>
             </div>
             <section>
-                <h2>joueurs:</h2>
+                <h2><i class="fa fa-user"></i>joueurs:</h2>
                 <div class="row">
+                    <div id="player-0" class="col-lg-4"></div>
                     <div id="player-1" class="col-lg-4"></div>
                     <div id="player-2" class="col-lg-4"></div>
                     <div id="player-3" class="col-lg-4"></div>
-                    <div id="player-4" class="col-lg-4"></div>
+                    
                 </div>
-                <h2>état du jeu:</h2>
+                <h2><i class="fa fa-gear"></i>état du jeu:</h2>
                 <div class="row">
                     <div id="state" class="col-lg-4"></div>
                     <div id="display" class="col-lg-4"></div>
