jouer un certain nombre de tours

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@ and open the template in the editor.
                 <h2><i class="fa fa-gear"></i>état du jeu:</h2>
                 <div class="row">
                     <div id="state" class="col-lg-4"></div>
-                    <div id="display" class="col-lg-4"></div>
+                    <div id="display" class="col-lg-4">
+                        <div class="jumbotron">Sparti!</div>
+                        Nos gaillards jouent tour à tour à qui aura le plus de puissance.
+                        <div id="log"></div>
+                    </div>
                     
                 </div>
                 
