--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@ and open the template in the editor.
             <a class="btn btn-primary" href="http://artlemoine.com">mon portfolio</a>
             <div class="Well">
                 <h1>
-                    <i class="fa fa-card"></i>
                     Un jeu de cartes en Javascript. Merveilleux.
                 </h1>
             </div>
             <section>
-                <h2><i class="fa fa-user"></i>joueurs:</h2>
+                <h2>joueurs: <i class="fa fa-user"></i></h2>
                 <div class="row">
                     <div id="player-0" class="col-lg-4 well"></div>
                     <div id="player-1" class="col-lg-4 well"></div>
                     <div id="player-2" class="col-lg-4 well"></div>
                     <div id="player-3" class="col-lg-4 well"></div>
                 </div>
-                <h2><i class="fa fa-gear"></i>état du jeu:</h2>
+                <h2>état du jeu:<i class="fa fa-gear"></i></h2>
                 <div class="row">
                     <div id="state" class="col-lg-4 well"></div>
                     <div id="display" class="col-lg-4">
