health ne liste plus les cartes dans le deck

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ and open the template in the editor.
                     Un jeu de cartes en Javascript. Merveilleux.
                 </h1>
             </div>
+            
             <section>
                 <h2>joueurs: <i class="fa fa-user"></i></h2>
                 <div class="row">
@@ -34,6 +35,29 @@ and open the template in the editor.
                     <div id="display" class="col-lg-4">
                         <div class="jumbotron">Sparti!</div>
                         Nos gaillards jouent tour à tour à qui aura le plus de puissance.
+                        <section id="rules">
+                            <h2>Règles du jeu</h2>
+                            <ul>
+                                <li>
+                                  Tour à tour, chaque joueur pose une carte sur la table.  
+                                </li>
+                                <li>
+                                    Le joueur compare la valeur de sa carte avec la carte posée précédemment.
+                                </li>
+                                <li>
+                                    La valeur la plus élevée fait gagner un point à son joueur.
+                                </li>
+                                <li>
+                                    Une égalité fait gagner un point aux deux joueurs.
+                                </li>
+                                <li>
+                                    Le perdant pioche une carte
+                                </li>
+                                <li>
+                                    Si un joueur n'a plus de cartes, il gagne.
+                                </li>
+                            </ul>
+                        </section>
                         <div id="log"></div>
                     </div>
                 </div>
