--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@ and open the template in the editor.
                     Un jeu de cartes en Javascript. Merveilleux.
                 </h1>
             </div>
+            <section>
+                <div id="input-instructions" class="well text-info">
 
+                </div>
+                <div id="input-choice" class="well row">
+
+                </div>
+            </section>
             <section>
                 <h2>joueurs: <i class="fa fa-user"></i></h2>
                 <div class="row">
